--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,11 @@
-<my-app>loading</my-app>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <my-app>loading</my-app>
+</body>
+</html>
